--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "moment": "^2.30.1",
-    "moment-timer": "^1.3.0"
+    "moment-timer": "^1.3.0",
+    "sass": "^1.70.0"
   }
 }
