--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "easytimer.js": "^4.6.0",
     "moment": "^2.30.1",
     "moment-timer": "^1.3.0",
     "sass": "^1.70.0"
